--- a/index.html
+++ b/index.html
@@ -1,12 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <img class="header__logo" src="" alt="">
+    </header>
+    <div class="localisation">
+        <div class="localisation__icon"><i></i></div>
+        <div class="localisation__title">Paris, Belleville</div>
+    </div>
+    <section class="book">
+        <h1 class="book__title">Réservez le menu qui vous convient</h1>
+        <p class="book__subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+        <button class="button" type="button">Explorer nos restaurants</button>
+    </section>
+    <section class="operation">
+        <h2 class="operation-title">Fonctionnement</h2>
+        <div class="operation-card">
+            <div class="operation-card__number">1</div>
+            <div class="operation-card__icon"><i></i></div>
+            <div class="operation-card__text">Choisissez un restaurant</div>
+        </div>
+        <div class="operation-card">
+            <div class="operation-card__number">2</div>
+            <div class="operation-card__icon"><i></i></div>
+            <div class="operation-card__text">Composez votre menu</div>
+        </div>
+        <div class="operation-card operation-card--color">
+            <div class="operation-card__number">3</div>
+            <div class="operation-card__icon operation-card__icon--color"><i></i></div>
+            <div class="operation-card__text">Choisissez un restaurant</div>
+        </div>
+    </section>
+    <section class="restaurant">
+        <h2 class="restaurant-title">Restaurants</h2>
+        <div class="restaurant-card">
+            <div class="restaurant-card--new">Nouveau</div>
+            <div class="restaurant-card__image">
+                <img src="" alt="">
+            </div>
+            <div class="restaurant-card__description">
+                <div class="restaurant-card__text">
+                    <h3 class="restaurant-card__title">La palette du goût</h3>
+                    <p class="restaurant-card__location">Ménilmontant</p>
+                </div>
+                <div class="restaurant-card__icon">
+                    <i></i>
+                </div>
+            </div>
+        </div>
+        <div class="restaurant-card">
+            <div class="restaurant-card--new">Nouveau</div>
+            <div class="restaurant-card__image">
+                <img src="" alt="">
+            </div>
+            <div class="restaurant-card__description">
+                <div class="restaurant-card__text">
+                    <h3 class="restaurant-card__title">La note enchantée</h3>
+                    <p class="restaurant-card__location">Charonne</p>
+                </div>
+                <div class="restaurant-card__icon">
+                    <i></i>
+                </div>
+            </div>
+        </div>
+        <div class="restaurant-card">
+            <div class="restaurant-card__image">
+                <img src="" alt="">
+            </div>
+            <div class="restaurant-card__description">
+                <div class="restaurant-card__text">
+                    <h3 class="restaurant-card__title">A la française</h3>
+                    <p class="restaurant-card__location">Cité Rouge</p>
+                </div>
+                <div class="restaurant-card__icon">
+                    <i></i>
+                </div>
+            </div>
+        </div>
+        <div class="restaurant-card">
+            <div class="restaurant-card__image">
+                <img src="" alt="">
+            </div>
+            <div class="restaurant-card__description">
+                <div class="restaurant-card__text">
+                    <h3 class="restaurant-card__title">Le délice des sens</h3>
+                    <p class="restaurant-card__location">Folie-Méricourt!</p>
+                </div>
+                <div class="restaurant-card__icon">
+                    <i></i>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer__logo"></div>
+        <div>
+            <div class="footer__icon"><i></i></div>
+            <a  href="">Proposer un restaurant</a>
+        </div>
+        <div>
+            <div class="footer__icon"><i></i></div>
+            <a  href="">Devenir partenaire</a>
+        </div>
+        <div>
+            <a  href="">Mentions légales</a>
+        </div>
+        <div>
+            <a  href="">Contact</a>
+        </div>
+    </footer>
 </body>
+
 </html>
