--- a/public/index.html
+++ b/public/index.html
@@ -28,71 +28,75 @@
     </section>
     <section class="operation">
         <h2 class="operation-title">Fonctionnement</h2>
-        <div class="operation-card">
-            <div class="operation-card__number">1</div>
-            <div class="operation-card__icon"><i class="fas fa-mobile-alt"></i></div>
-            <div class="operation-card__text">Choisissez un restaurant</div>
-        </div>
-        <div class="operation-card">
-            <div class="operation-card__number">2</div>
-            <div class="operation-card__icon"><i class="fas fa-list-ul"></i></div>
-            <div class="operation-card__text">Composez votre menu</div>
-        </div>
-        <div class="operation-card operation-card--color">
-            <div class="operation-card__number">3</div>
-            <div class="operation-card__icon operation-card__icon--color"><i class="fas fa-store"></i></div>
-            <div class="operation-card__text">Choisissez un restaurant</div>
+        <div class="operation-container">
+            <div class="operation-card">
+                <div class="operation-card__number">1</div>
+                <div class="operation-card__icon"><i class="fas fa-mobile-alt"></i></div>
+                <div class="operation-card__text">Choisissez un restaurant</div>
+            </div>
+            <div class="operation-card">
+                <div class="operation-card__number">2</div>
+                <div class="operation-card__icon"><i class="fas fa-list-ul"></i></div>
+                <div class="operation-card__text">Composez votre menu</div>
+            </div>
+            <div class="operation-card operation-card--color">
+                <div class="operation-card__number">3</div>
+                <div class="operation-card__icon operation-card__icon--color"><i class="fas fa-store"></i></div>
+                <div class="operation-card__text">Choisissez un restaurant</div>
+            </div>
         </div>
     </section>
     <section class="restaurant">
         <h2 class="restaurant-title">Restaurants</h2>
-        <div class="restaurant-card">
-            <div class="restaurant-card--new">Nouveau</div>
-            <img class="restaurant-card__image" src="jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-            <div class="restaurant-card__description">
-                <div class="restaurant-card__text">
-                    <h3 class="restaurant-card__title">La palette du goût</h3>
-                    <p class="restaurant-card__location">Ménilmontant</p>
-                </div>
-                <div class="restaurant-card__icon">
-                    <i class="far fa-heart"></i>
-                </div>
-            </div>
-        </div>
-        <div class="restaurant-card">
-            <div class="restaurant-card--new">Nouveau</div>
-            <img class="restaurant-card__image" src="stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-            <div class="restaurant-card__description">
-                <div class="restaurant-card__text">
-                    <h3 class="restaurant-card__title">La note enchantée</h3>
-                    <p class="restaurant-card__location">Charonne</p>
-                </div>
-                <div class="restaurant-card__icon">
-                    <i class="far fa-heart"></i>
+        <div class="restaurant-container">
+            <div class="restaurant-card">
+                <div class="restaurant-card--new">Nouveau</div>
+                <img class="restaurant-card__image" src="jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <div class="restaurant-card__description">
+                    <div class="restaurant-card__text">
+                        <h3 class="restaurant-card__title">La palette du goût</h3>
+                        <p class="restaurant-card__location">Ménilmontant</p>
+                    </div>
+                    <div class="restaurant-card__icon">
+                        <i class="far fa-heart"></i>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="restaurant-card">
-            <img class="restaurant-card__image" src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-            <div class="restaurant-card__description">
-                <div class="restaurant-card__text">
-                    <h3 class="restaurant-card__title">A la française</h3>
-                    <p class="restaurant-card__location">Cité Rouge</p>
-                </div>
-                <div class="restaurant-card__icon">
-                    <i class="far fa-heart"></i>
+            <div class="restaurant-card">
+                <div class="restaurant-card--new">Nouveau</div>
+                <img class="restaurant-card__image" src="stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                <div class="restaurant-card__description">
+                    <div class="restaurant-card__text">
+                        <h3 class="restaurant-card__title">La note enchantée</h3>
+                        <p class="restaurant-card__location">Charonne</p>
+                    </div>
+                    <div class="restaurant-card__icon">
+                        <i class="far fa-heart"></i>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="restaurant-card">
-            <img class="restaurant-card__image" src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-            <div class="restaurant-card__description">
-                <div class="restaurant-card__text">
-                    <h3 class="restaurant-card__title">Le délice des sens</h3>
-                    <p class="restaurant-card__location">Folie-Méricourt!</p>
+            <div class="restaurant-card">
+                <img class="restaurant-card__image" src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                <div class="restaurant-card__description">
+                    <div class="restaurant-card__text">
+                        <h3 class="restaurant-card__title">A la française</h3>
+                        <p class="restaurant-card__location">Cité Rouge</p>
+                    </div>
+                    <div class="restaurant-card__icon">
+                        <i class="far fa-heart"></i>
+                    </div>
                 </div>
-                <div class="restaurant-card__icon">
-                    <i class="far fa-heart"></i>
+            </div>
+            <div class="restaurant-card">
+                <img class="restaurant-card__image" src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                <div class="restaurant-card__description">
+                    <div class="restaurant-card__text">
+                        <h3 class="restaurant-card__title">Le délice des sens</h3>
+                        <p class="restaurant-card__location">Folie-Méricourt!</p>
+                    </div>
+                    <div class="restaurant-card__icon">
+                        <i class="far fa-heart"></i>
+                    </div>
                 </div>
             </div>
         </div>
