--- a/public/index.html
+++ b/public/index.html
@@ -29,14 +29,14 @@
     <section class="operation">
         <h2 class="operation-title">Fonctionnement</h2>
         <div class="operation-container">
-            <div class="operation-card">
+            <div class="operation-card operation-card--color">
                 <div class="operation-card__number">1</div>
-                <div class="operation-card__icon"><i class="fas fa-mobile-alt"></i></div>
+                <div class="operation-card__icon operation-card__icon--color"><i class="fas fa-mobile-alt"></i></div>
                 <div class="operation-card__text">Choisissez un restaurant</div>
             </div>
-            <div class="operation-card">
+            <div class="operation-card operation-card--color">
                 <div class="operation-card__number">2</div>
-                <div class="operation-card__icon"><i class="fas fa-list-ul"></i></div>
+                <div class="operation-card__icon operation-card__icon--color"><i class="fas fa-list-ul"></i></div>
                 <div class="operation-card__text">Composez votre menu</div>
             </div>
             <div class="operation-card operation-card--color">
@@ -49,7 +49,7 @@
     <section class="restaurant">
         <h2 class="restaurant-title">Restaurants</h2>
         <div class="restaurant-container">
-            <div class="restaurant-card">
+            <a class="restaurant-card" href="">
                 <div class="restaurant-card--new">Nouveau</div>
                 <img class="restaurant-card__image" src="jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
@@ -61,8 +61,8 @@
                         <i class="far fa-heart"></i>
                     </div>
                 </div>
-            </div>
-            <div class="restaurant-card">
+            </a>
+            <a class="restaurant-card" href="">
                 <div class="restaurant-card--new">Nouveau</div>
                 <img class="restaurant-card__image" src="stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
@@ -74,8 +74,8 @@
                         <i class="far fa-heart"></i>
                     </div>
                 </div>
-            </div>
-            <div class="restaurant-card">
+            </a>
+            <a class="restaurant-card" href="">
                 <img class="restaurant-card__image" src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
                     <div class="restaurant-card__text">
@@ -86,8 +86,8 @@
                         <i class="far fa-heart"></i>
                     </div>
                 </div>
-            </div>
-            <div class="restaurant-card">
+            </a>
+            <a class="restaurant-card" href="">
                 <img class="restaurant-card__image" src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
                     <div class="restaurant-card__text">
@@ -98,7 +98,7 @@
                         <i class="far fa-heart"></i>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
     </section>
     <footer class="footer">
