--- a/public/la-note-enchantée.html
+++ b/public/la-note-enchantée.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c03516f22.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>La note enchantée</title>
 </head>
 
 <body>
@@ -19,10 +19,10 @@
         <img class="header__logo" src="ohmyfood@2x.svg" alt="">
     </header>
     <div class="menu">
-        <img class="menu-image" src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+        <img class="menu-image" src="stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
         <div class="menu-body">
             <div class="food">
-                <h1 class="food__title">A la française</h1>
+                <h1 class="food__title">La note enchantée</h1>
                 <div class="food__icon"><i class="far fa-heart"></i></div>
             </div>
             <div class="dish-types">
@@ -31,24 +31,31 @@
                     <div class="dishes-line"></div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Tartare de poulpe acidulé</h3>
-                            <p class="dishes-card__subtitle">Aux zestes d'orange</p>
+                            <h3 class="dishes-card__title">Ravioles de foie gras</h3>
+                            <p class="dishes-card__subtitle">Accompagnés de leur crème à la truffe</p>
                         </div>
                         <div class="dishes-card__price">25€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Velouté de légumes d'antan</h3>
-                            <p class="dishes-card__subtitle">Carotte, panais, topinambour</p>
+                            <h3 class="dishes-card__title">Caviar osciètre</h3>
+                            <p class="dishes-card__subtitle">Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Soupe à l'oignon</h3>
-                            <p class="dishes-card__subtitle">Revisitée</p>
+                            <h3 class="dishes-card__title">Homard et espuma de potiron</h3>
+                            <p class="dishes-card__subtitle">Mariné aux zestes d'orange</p>
                         </div>
                         <div class="dishes-card__price">20€</div>
+                    </div>
+                    <div class="dishes-card">
+                        <div class="dishes-card__description">
+                            <h3 class="dishes-card__title">Foie gras de canard cuit entier</h3>
+                            <p class="dishes-card__subtitle">Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="dishes-card__price">35€</div>
                     </div>
                 </section>
                 <section class="dishes">
