add text menu and links in HTML

--- a/public/la-note-enchantée.html
+++ b/public/la-note-enchantée.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <i class="header__return-icon fas fa-arrow-left"></i>
+        <a href="index.html"><i class="header__return-icon fas fa-arrow-left"></i></a>
         <img class="header__logo" src="ohmyfood@2x.svg" alt="">
     </header>
     <div class="menu">
@@ -63,22 +63,22 @@
                     <div class="dishes-line"></div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Coquilles Saint-Jacques</h3>
-                            <p class="dishes-card__subtitle">Carotte, panais, topinambour</p>
+                            <h3 class="dishes-card__title">Noix de coquilles Saint-Jacques</h3>
+                            <p class="dishes-card__subtitle">Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div class="dishes-card__price">40€</div>
+                    </div>
+                    <div class="dishes-card">
+                        <div class="dishes-card__description">
+                            <h3 class="dishes-card__title">Langoustine poêlée</h3>
+                            <p class="dishes-card__subtitle">Purée de patate douce</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Magret de canard</h3>
-                            <p class="dishes-card__subtitle">Et parmentier de pommes de terre</p>
-                        </div>
-                        <div class="dishes-card__price">35€</div>
-                    </div>
-                    <div class="dishes-card">
-                        <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p class="dishes-card__subtitle">Sur son lit de gnocchis aux légumes</p>
+                            <h3 class="dishes-card__title">Mijoté de queue de boeuf</h3>
+                            <p class="dishes-card__subtitle">Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="dishes-card__price">44€</div>
                     </div>
@@ -88,22 +88,22 @@
                     <div class="dishes-line"></div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Pétales de violettes glacés</h3>
-                            <p class="dishes-card__subtitle">Et purée de noisettes</p>
+                            <h3 class="dishes-card__title">Macaron noisette et chocolat</h3>
+                            <p class="dishes-card__subtitle">Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="dishes-card__price">18€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Fondant au chocolat</h3>
-                            <p class="dishes-card__subtitle">Revisité</p>
+                            <h3 class="dishes-card__title">Baba au rhum revisité</h3>
+                            <p class="dishes-card__subtitle">Avec son coulis de citron</p>
                         </div>
                         <div class="dishes-card__price">22€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Millefeuille croustillant</h3>
-                            <p class="dishes-card__subtitle">Myrtilles et pâte d’amande</p>
+                            <h3 class="dishes-card__title">Tarte au citron meringuée</h3>
+                            <p class="dishes-card__subtitle">Déstructurée</p>
                         </div>
                         <div class="dishes-card__price">23€</div>
                     </div>
