--- a/public/le-delice-des-sens.html
+++ b/public/le-delice-des-sens.html
@@ -10,19 +10,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c03516f22.js" crossorigin="anonymous"></script>
-    <title>A la française</title>
+    <title>Le délice des sens</title>
 </head>
 
 <body>
     <header class="header">
-        <i class="header__return-icon fas fa-arrow-left"></i>
+        <a href="index.html"><i class="header__return-icon fas fa-arrow-left"></i></a>
         <img class="header__logo" src="ohmyfood@2x.svg" alt="">
     </header>
     <div class="menu">
-        <img class="menu-image" src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+        <img class="menu-image" src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
         <div class="menu-body">
             <div class="food">
-                <h1 class="food__title">A la française</h1>
+                <h1 class="food__title">Le délice des sens</h1>
                 <div class="food__icon"><i class="far fa-heart"></i></div>
             </div>
             <div class="dish-types">
@@ -31,22 +31,22 @@
                     <div class="dishes-line"></div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Tartare de poulpe acidulé</h3>
-                            <p class="dishes-card__subtitle">Aux zestes d'orange</p>
+                            <h3 class="dishes-card__title">Tartare de thon</h3>
+                            <p class="dishes-card__subtitle">Assaisonné au yuzu</p>
                         </div>
                         <div class="dishes-card__price">25€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Velouté de légumes d'antan</h3>
-                            <p class="dishes-card__subtitle">Carotte, panais, topinambour</p>
+                            <h3 class="dishes-card__title">Bouchée de homard croustillant</h3>
+                            <p class="dishes-card__subtitle">Et sa farandole de petits légumes</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Soupe à l'oignon</h3>
-                            <p class="dishes-card__subtitle">Revisitée</p>
+                            <h3 class="dishes-card__title">Velouté de cèpes</h3>
+                            <p class="dishes-card__subtitle">Aux truffes</p>
                         </div>
                         <div class="dishes-card__price">20€</div>
                     </div>
@@ -56,22 +56,22 @@
                     <div class="dishes-line"></div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Coquilles Saint-Jacques</h3>
-                            <p class="dishes-card__subtitle">Carotte, panais, topinambour</p>
+                            <h3 class="dishes-card__title">Poulet rôti aux herbes de Provence</h3>
+                            <p class="dishes-card__subtitle">Et sa crème de truffe</p>
+                        </div>
+                        <div class="dishes-card__price">40€</div>
+                    </div>
+                    <div class="dishes-card">
+                        <div class="dishes-card__description">
+                            <h3 class="dishes-card__title">Langouste rôtie</h3>
+                            <p class="dishes-card__subtitle">Et ses légumes de saison</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Magret de canard</h3>
-                            <p class="dishes-card__subtitle">Et parmentier de pommes de terre</p>
-                        </div>
-                        <div class="dishes-card__price">35€</div>
-                    </div>
-                    <div class="dishes-card">
-                        <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p class="dishes-card__subtitle">Sur son lit de gnocchis aux légumes</p>
+                            <h3 class="dishes-card__title">Côte de boeuf Angus</h3>
+                            <p class="dishes-card__subtitle">Et sa purée de panais</p>
                         </div>
                         <div class="dishes-card__price">44€</div>
                     </div>
@@ -81,22 +81,22 @@
                     <div class="dishes-line"></div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Pétales de violettes glacés</h3>
-                            <p class="dishes-card__subtitle">Et purée de noisettes</p>
+                            <h3 class="dishes-card__title">Farandole de desserts</h3>
+                            <p class="dishes-card__subtitle">Du chef</p>
                         </div>
                         <div class="dishes-card__price">18€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Fondant au chocolat</h3>
-                            <p class="dishes-card__subtitle">Revisité</p>
+                            <h3 class="dishes-card__title">Crème brulée</h3>
+                            <p class="dishes-card__subtitle">Revisitée</p>
                         </div>
                         <div class="dishes-card__price">22€</div>
                     </div>
                     <div class="dishes-card">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Millefeuille croustillant</h3>
-                            <p class="dishes-card__subtitle">Myrtilles et pâte d’amande</p>
+                            <h3 class="dishes-card__title">Tiramisu</h3>
+                            <p class="dishes-card__subtitle">À la noisette</p>
                         </div>
                         <div class="dishes-card__price">23€</div>
                     </div>
