--- a/public/a-la-francaise.html
+++ b/public/a-la-francaise.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <i class="header__return-icon fas fa-arrow-left"></i>
+        <a href="index.html"><i class="header__return-icon fas fa-arrow-left"></i></a>
         <img class="header__logo" src="ohmyfood@2x.svg" alt="">
     </header>
     <div class="menu">
