--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <section class="restaurant">
         <h2 class="restaurant-title">Restaurants</h2>
         <div class="restaurant-container">
-            <a class="restaurant-card" href="">
+            <a class="restaurant-card" href="la-palette-du-gout.html">
                 <div class="restaurant-card--new">Nouveau</div>
                 <img class="restaurant-card__image" src="jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </a>
-            <a class="restaurant-card" href="">
+            <a class="restaurant-card" href="la-note-enchantée.html">
                 <div class="restaurant-card--new">Nouveau</div>
                 <img class="restaurant-card__image" src="stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             </a>
-            <a class="restaurant-card" href="">
+            <a class="restaurant-card" href="a-la-francaise.html">
                 <img class="restaurant-card__image" src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
                     <div class="restaurant-card__text">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </a>
-            <a class="restaurant-card" href="">
+            <a class="restaurant-card" href="le-delice-des-sens.html">
                 <img class="restaurant-card__image" src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
                     <div class="restaurant-card__text">
