--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,9 @@
                         <h3 class="restaurant-card__title">La palette du goût</h3>
                         <p class="restaurant-card__location">Ménilmontant</p>
                     </div>
-                    <div class="restaurant-card__icon">
-                        <i class="far fa-heart"></i>
+                    <div class="restaurant-card__icon fa-stack">
+                        <i class="far fa-heart fa-stack-1x"></i>
+                        <i class="fas fa-heart fa-stack-1x"></i>
                     </div>
                 </div>
             </a>
@@ -70,8 +71,9 @@
                         <h3 class="restaurant-card__title">La note enchantée</h3>
                         <p class="restaurant-card__location">Charonne</p>
                     </div>
-                    <div class="restaurant-card__icon">
-                        <i class="far fa-heart"></i>
+                    <div class="restaurant-card__icon fa-stack">
+                        <i class="far fa-heart fa-stack-1x"></i>
+                        <i class="fas fa-heart fa-stack-1x"></i>
                     </div>
                 </div>
             </a>
@@ -82,8 +84,9 @@
                         <h3 class="restaurant-card__title">A la française</h3>
                         <p class="restaurant-card__location">Cité Rouge</p>
                     </div>
-                    <div class="restaurant-card__icon">
-                        <i class="far fa-heart"></i>
+                    <div class="restaurant-card__icon fa-stack">
+                        <i class="far fa-heart fa-stack-1x"></i>
+                        <i class="fas fa-heart fa-stack-1x"></i>
                     </div>
                 </div>
             </a>
@@ -94,8 +97,9 @@
                         <h3 class="restaurant-card__title">Le délice des sens</h3>
                         <p class="restaurant-card__location">Folie-Méricourt!</p>
                     </div>
-                    <div class="restaurant-card__icon">
-                        <i class="far fa-heart"></i>
+                    <div class="restaurant-card__icon fa-stack">
+                        <i class="far fa-heart fa-stack-1x"></i>
+                        <i class="fas fa-heart fa-stack-1x"></i>
                     </div>
                 </div>
             </a>
