--- a/public/la-note-enchantée.html
+++ b/public/la-note-enchantée.html
@@ -23,7 +23,10 @@
         <div class="menu-body">
             <div class="food">
                 <h1 class="food__title">La note enchantée</h1>
-                <div class="food__icon"><i class="far fa-heart"></i></div>
+                <div class="food__icon fa-stack">
+                    <i class="far fa-heart fa-stack-1x"></i>
+                    <i class="fas fa-heart fa-stack-1x"></i>
+                </div>
             </div>
             <div class="dish-types">
                 <section class="dishes">
