dishes-card appearance animation

--- a/public/a-la-francaise.html
+++ b/public/a-la-francaise.html
@@ -32,21 +32,21 @@
                 <section class="dishes">
                     <h2 class="dishes-title">ENTREES</h2>
                     <div class="dishes-line"></div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--1">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Tartare de poulpe acidulé</h3>
                             <p class="dishes-card__subtitle">Aux zestes d'orange</p>
                         </div>
                         <div class="dishes-card__price">25€</div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--2">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Velouté de légumes d'antan</h3>
                             <p class="dishes-card__subtitle">Carotte, panais, topinambour</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Soupe à l'oignon</h3>
                             <p class="dishes-card__subtitle">Revisitée</p>
