animation check-mark

--- a/public/a-la-francaise.html
+++ b/public/a-la-francaise.html
@@ -38,6 +38,9 @@
                             <p class="dishes-card__subtitle">Aux zestes d'orange</p>
                         </div>
                         <div class="dishes-card__price">25€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                     <div class="dishes-card dishes-card--2">
                         <div class="dishes-card__description">
