add loading spinner animation

--- a/public/a-la-francaise.html
+++ b/public/a-la-francaise.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
         rel="stylesheet">
@@ -48,6 +48,9 @@
                             <p class="dishes-card__subtitle">Carotte, panais, topinambour</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                     <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
@@ -55,56 +58,77 @@
                             <p class="dishes-card__subtitle">Revisitée</p>
                         </div>
                         <div class="dishes-card__price">20€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                 </section>
                 <section class="dishes">
                     <h2 class="dishes-title">PLATS</h2>
                     <div class="dishes-line"></div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--1">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Coquilles Saint-Jacques</h3>
                             <p class="dishes-card__subtitle">Carotte, panais, topinambour</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--2">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Magret de canard</h3>
                             <p class="dishes-card__subtitle">Et parmentier de pommes de terre</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Pigeonneau d’Ille-et-Vilaine</h3>
                             <p class="dishes-card__subtitle">Sur son lit de gnocchis aux légumes</p>
                         </div>
                         <div class="dishes-card__price">44€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                 </section>
                 <section class="dishes">
                     <h2 class="dishes-title">DESSERTS</h2>
                     <div class="dishes-line"></div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--1">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Pétales de violettes glacés</h3>
                             <p class="dishes-card__subtitle">Et purée de noisettes</p>
                         </div>
                         <div class="dishes-card__price">18€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--2">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Fondant au chocolat</h3>
                             <p class="dishes-card__subtitle">Revisité</p>
                         </div>
                         <div class="dishes-card__price">22€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Millefeuille croustillant</h3>
                             <p class="dishes-card__subtitle">Myrtilles et pâte d’amande</p>
                         </div>
                         <div class="dishes-card__price">23€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                 </section>
             </div>
