--- a/public/le-delice-des-sens.html
+++ b/public/le-delice-des-sens.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
         rel="stylesheet">
@@ -32,76 +32,103 @@
                 <section class="dishes">
                     <h2 class="dishes-title">ENTREES</h2>
                     <div class="dishes-line"></div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--1">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Tartare de thon</h3>
                             <p class="dishes-card__subtitle">Assaisonné au yuzu</p>
                         </div>
                         <div class="dishes-card__price">25€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--2">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Bouchée de homard croustillant</h3>
                             <p class="dishes-card__subtitle">Et sa farandole de petits légumes</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Velouté de cèpes</h3>
                             <p class="dishes-card__subtitle">Aux truffes</p>
                         </div>
                         <div class="dishes-card__price">20€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                 </section>
                 <section class="dishes">
                     <h2 class="dishes-title">PLATS</h2>
                     <div class="dishes-line"></div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--1">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Poulet rôti aux herbes de Provence</h3>
                             <p class="dishes-card__subtitle">Et sa crème de truffe</p>
                         </div>
                         <div class="dishes-card__price">40€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--2">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Langouste rôtie</h3>
                             <p class="dishes-card__subtitle">Et ses légumes de saison</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Côte de boeuf Angus</h3>
                             <p class="dishes-card__subtitle">Et sa purée de panais</p>
                         </div>
                         <div class="dishes-card__price">44€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                 </section>
                 <section class="dishes">
                     <h2 class="dishes-title">DESSERTS</h2>
                     <div class="dishes-line"></div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--1">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Farandole de desserts</h3>
                             <p class="dishes-card__subtitle">Du chef</p>
                         </div>
                         <div class="dishes-card__price">18€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--2">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Crème brulée</h3>
                             <p class="dishes-card__subtitle">Revisitée</p>
                         </div>
                         <div class="dishes-card__price">22€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
                             <h3 class="dishes-card__title">Tiramisu</h3>
                             <p class="dishes-card__subtitle">À la noisette</p>
                         </div>
                         <div class="dishes-card__price">23€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                 </section>
             </div>
