--- a/public/le-delice-des-sens.html
+++ b/public/le-delice-des-sens.html
@@ -151,7 +151,7 @@
             <a href="">Mentions légales</a>
         </div>
         <div class="footer__link">
-            <a href="">Contact</a>
+            <a href="mailto:aureliebernard29@gmail.com">Contact</a>
         </div>
     </footer>
 </body>
